# bhmc-api

./: .dockerignore  .gitignore  2020_Champions.csv  AllSprocs.sql  CLAUDE.md  CleanUpExpired.sql  CustomS3Boto3Storage.py  Dockerfile  GetFriends.sql  GetRegistrationFeesByEvent.sql  GetRegistrationsByEvent.sql  PostRestoreUpdates.sql  README.md  ResetLocalUsers.sql  SearchPlayers.sql  agents.md  backup-restore.txt  docker-compose.yml  fixture_commands.txt  main.py  manage.py  pyproject.toml  refund-plan.md  registration.md  requirements.in  requirements.txt  score queries.sql
accounts/: admin.py  imports.py  models.py  reports.py  serializers.py  tasks.py  test_csv_generation.py  test_imports.py  urls.py  views.py
bhmc/: __init__.py  celery.py  settings.py  settings_base.py  urls.py
content/: admin.py  models.py  serializers.py  views.py
core/: admin.py  email.py  exception_handler.py  manager.py  middleware.py  models.py  serializers.py  tasks.py  util.py  views.py
courses/: admin.py  managers.py  models.py  serializers.py  views.py
damcup/: admin.py  models.py  serializers.py  utils.py  views.py
docs/: .$registration-schema.drawio.bkp  accounts-implementation.md  golf-genius-api-integration.md  registration-schema.drawio  skins-account.md  skins-import.md
documents/: actions.py  admin.py  managers.py  models.py  serializers.py  utils.py  views.py
events/: admin.py  managers.py  models.py  serializers.py  tests.py  views.py
golfgenius/: admin.py  apps.py  client.py  event_sync_service.py  player_sync_service.py  results_import_service.py  services.py  (+5 more)
(+234 files in other folders)
