[project]
name = "bhmc-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3==1.42.3",
    "botocore==1.42.3",
    "celery==5.5.3",
    "django==5.2.9",
    "django-anymail==13.1",
    "django-appconf==1.2.0",
    "django-celery-beat==2.8.1",
    "django-celery-results==2.6.0",
    "django-cors-headers==4.7.0",
    "django-imagekit==6.0.0",
    "django-pagedown==2.2.1",
    "django-simple-history==3.10.1",
    "django-storages==1.14.6",
    "django-structlog==10.0.0",
    "django-templated-email==3.1.1",
    "djangorestframework==3.16.1",
    "djoser==2.3.3",
    "mysqlclient==2.2.6",
    "openpyxl==3.1.5",
    "pillow==12.0.0",
    "ptvsd==4.3.2",
    "python-dotenv==1.2.1",
    "pytz==2025.2",
    "pyyaml>=6.0.3",
    "redis==7.1.0",
    "requests==2.32.5",
    "stripe==14.0.1",
    "xlrd==2.0.2",
]
